--- a/personal_info.html
+++ b/personal_info.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Edit Profile</title>
   <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="stylecable.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   <style>
@@ -50,6 +51,9 @@
         border-radius: 20%;
         margin-bottom: 16px;
     }
+    .center{
+      text-align: center;
+    }
 </style>
 </head>
 <body>
@@ -76,7 +80,7 @@
         <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+        <a class="nav-link" href="index.html">ออกจากระบบ</a>
       </li>
     </ul>
   </div>
@@ -88,7 +92,7 @@
   <div>
       <!-- Display User Information -->
       <div>
-          <img class="profile-img" src="path/to/user/profile/image.jpg" alt="Profile Image">
+          <img class="profile-img center" src="img/profile.jpg" alt="Profile Image">
           <p><strong>Username:</strong> Time_me_me</p>
           <p><strong>Email:</strong> timemie@gmail.com</p>
       </div>
