--- a/maincat.html
+++ b/maincat.html
@@ -32,7 +32,7 @@
   <div class="collapse navbar-collapse" id="navbarNav" >
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="maincat.html">จัดการข้อมูลแมว</a>
+        <a class="nav-link" href="cutcatdata.html">จัดการข้อมูลแมว</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="reserve.html">การจองห้อง</a>
