--- a/home.html
+++ b/home.html
@@ -42,11 +42,32 @@
 </nav>
 
 <!-- Main Content -->
-<div class="container mt-5">
-  <h2>Home Page</h2>
-  <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
+<div class="container content mt-5">
+  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
 
+  <!-- Cat List -->
+  <div class="cat-list mt-4">
+    <!-- Cat 1 -->
+    <div class="cat-item">
+      <img src="./img/cat1.jpg" alt="Cat 1">
+      <h3>ชื่อแมว: แมวที่ 1</h3>
+      <p>เพศ: ชาย</p>
+      <p>สายพันธุ์: สก็อตทิชหรืออะบิสซีเนียน</p>
+    </div>
+
+    <!-- Cat 2 -->
+    <div class="cat-item">
+      <img src="./img/cat2.jpg" alt="Cat 2">
+      <h3>ชื่อแมว: แมวที่ 2</h3>
+      <p>เพศ: หญิง</p>
+      <p>สายพันธุ์: เปอร์เซีย</p>
+    </div>
+
+    <!-- Add more cat items as needed -->
+
+  </div>
 </div>
+
 
 <!-- Footer -->
 <footer class="bg-darkpink black p-10 mt-5 ">
