--- a/maincat.html
+++ b/maincat.html
@@ -54,10 +54,46 @@
 
 
 <!-- Main Content -->
-<div class="container content mt-5 " >
-  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
-
-</div>
+<div class="container content mt-5">
+    <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
+  
+    <!-- Cat Table -->
+    <table class="table mt-4">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">รูปแมว</th>
+          <th scope="col">ชื่อแมว</th>
+          <th scope="col">เพศ</th>
+          <th scope="col">สายพันธุ์</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Cat 1 -->
+        <tr>
+          <th scope="row">1</th>
+          <td><img src="./cat/cat-1.png" alt="Cat 1" width="100"></td>
+          <td>แมวที่ 1</td>
+          <td>ชาย</td>
+          <td>สก็อตทิชหรืออะบิสซีเนียน</td>
+        </tr>
+  
+        <!-- Cat 2 -->
+        <tr>
+          <th scope="row">2</th>
+          <td><img src="./cat/cat-2.png" alt="Cat 2" width="100"></td>
+          <td>แมวที่ 2</td>
+          <td>หญิง</td>
+          <td>เปอร์เซีย</td>
+        </tr>
+  
+        <!-- Add more rows for additional cats -->
+  
+      </tbody>
+    </table>
+  </div>
+  
+  
 
 <!-- body -->
 
