--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Registration</title>
+    <link rel="stylesheet" href="stylecable.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Favicon -->
@@ -67,6 +68,8 @@
     </ul>
   </div>
 </nav>
+
+
 </head>
 <body>    <!-- Main Content -->
   <div class="container mt-5">
