--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Custom Styles -->
   <link rel="stylesheet" href="stylecable.css">
+  <link rel="stylesheet" href="styleIndex.css">  
+  
+  
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
 </head>
-<body>
+<body style="background-image: url('./img/144550.jpg');">
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fce4ec;">
   <a class="navbar-brand" href="home.html">
-    <img src="/img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
+    <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +47,63 @@
 
 <!-- Main Content -->
 <div class="container mt-5">
-  <h1>ยินดีต้อนรับ เข้าสู่เว็บ Filo </h1>
+  <h1>
+    <div style="align-content: center;">
+      <ul class="ul-text-glow label-text-glow" >
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked=""/>
+              <div class="div-text-glow">ยิ</div>
+          </li >
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">น</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">ดี</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">ต้</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked=""/>
+              <div class="div-text-glow">อ</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">น</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">รั</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked=""/>
+              <div class="div-text-glow">บ</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">F</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">i</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">l</div>
+          </li>
+          <li class="li-text-glow">
+              <input class="input-text-glow" type="checkbox" checked="">
+              <div class="div-text-glow">o</div>
+          </li>
+      </ul>
+      </div>
+  </h1>
+  <h2><p style="color: crimson;">เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</p></h2>
   <h5><br>บริการรับฝากเลี้ยงแมว ทุกสายพันธุ์ และมีสัตว์แพทย์พร้อมดูแลตลอด 24 ชั่วโมง</h5>
+  <img src="./cat/cat-6.png" width="50%" height="50%">
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
