--- a/Showcondition.html
+++ b/Showcondition.html
@@ -13,7 +13,7 @@
 <body style="background-color: #fce4ec;;">
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(250, 159, 174);">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #f8f2f4;">
   <a class="navbar-brand" href="#">Filo to Conditions</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
