--- a/register.html
+++ b/register.html
@@ -48,7 +48,7 @@
         color: #888; /* สีข้อความท้าย */
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ff4081;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f8f2f4;">
   <a class="navbar-brand" href="#">Filo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
