--- a/printdatacat.html
+++ b/printdatacat.html
@@ -66,7 +66,7 @@
 </head>
 <body style="background-color: rgb(236, 178, 188);">
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f8f2f4;">
     <a class="navbar-brand" href="#">Profile Cat</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
