--- a/personal_info.html
+++ b/personal_info.html
@@ -55,7 +55,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(250, 159, 174);">
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #f8f2f4;">
   <a class="navbar-brand" href="home.html">
     <img > Filo </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
