--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="background-image: url('./img/144550.jpg');">
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fce4ec;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f8f2f4;">
   <a class="navbar-brand" href="home.html">
     <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
@@ -103,7 +103,12 @@
   </h1>
   <h2><p style="color: crimson;">เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</p></h2>
   <h5><br>บริการรับฝากเลี้ยงแมว ทุกสายพันธุ์ และมีสัตว์แพทย์พร้อมดูแลตลอด 24 ชั่วโมง</h5>
-  <img src="./cat/cat-6.png" width="50%" height="50%">
+  <div>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
+    <img src="./cat/cat-6.png" width="42%" height="50%">
+  </div>
+  
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
