--- a/Template.html
+++ b/Template.html
@@ -69,7 +69,7 @@
 <!-- footer.html -->
 
 <!-- Footer -->
-<footer class=" text-light p-1 mt-5" style="background-color: rgb(250, 159, 174);">
+<footer class=" text-light p-2 mt-5" style="background-color: rgb(250, 159, 174);">
     <div class="container">
       <div class="row">
         <div class="col-md-6 label-color-font">
@@ -79,6 +79,7 @@
           <p>Phone: 123-456-7890</p>
         </div>
         <div class="col-md-6 text-right label-color-font">
+          <p><br>  เปิดทุกวัน เวลา 09.00 - 19.00</p>
           <p>&copy; 2023 Your Website. All rights reserved.</p>
         </div>
       </div>
