--- a/index.html
+++ b/index.html
@@ -114,15 +114,17 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-darkpink black p-10 mt-5 ">
+<footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 label-color-font text-left">
         <h4>Contact Us</h4>
-        <p>Name: AAAA BBBB</p>
+        <p>Name : mama mama</p>
         <p>Email: your@email.com</p>
         <p>Phone: 123-456-7890</p>
-        <p><a href="https://www.google.com/maps/@8.6500202,99.8923991,15z?entry=ttu" target="_blank">Google Map</a></p>
+      </div>
+      <div class="col-md-6 text-right label-color-font">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
       </div>
     </div>
   </div>
