--- a/Template.html
+++ b/Template.html
@@ -32,6 +32,9 @@
   <div class="collapse navbar-collapse" id="navbarNav" >
     <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
+        <a class="nav-link" href="contract.html">ข้อมูลการติดต่อ</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="maincat.html">จัดการข้อมูลแมว</a>
       </li>
       <li class="nav-item">
@@ -45,6 +48,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">ออกจากระบบ</a>
       </li>
     </ul>
   </div>
