--- a/home.html
+++ b/home.html
@@ -3,27 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Home Page</title>
-  <!-- Bootstrap CSS -->
+  <title>Filo - Template</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="stylecable.css">
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
 </head>
-<body>
+<body  style="background-color: #fce4ec;;">
+<!--style="background-image: url('./cat/cats-cafe-4697753_1920.jpg');" -->
+
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
   <a class="navbar-brand" href="home.html">
-    <img src="/img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
+    <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
   </a>
+  <a class="navbar-brand" href="personal_info.html">
+    <img src="img/profile.jpg" alt="Profile" width="30" height="30" class="d-inline-block align-top rounded-circle">
+  </a>
+  <a class="navbar-brand" href="personal_info.html">
+    Welcome, John Doe <!-- Replace with the actual username -->
+  </a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
+  </button >
+  <div class="collapse navbar-collapse" id="navbarNav" >
+    <ul class="navbar-nav ml-auto" >
       <li class="nav-item">
-        <a class="nav-link" href="catdata.html">จัดการข้อมูลแมว</a>
+        <a class="nav-link" href="contract.html">ข้อมูลการติดต่อ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="maincat.html">จัดการข้อมูลแมว</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="reserve.html">การจองห้อง</a>
@@ -35,7 +47,7 @@
         <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+        <a class="nav-link" href="index.html">ออกจากระบบ</a>
       </li>
     </ul>
   </div>
@@ -43,22 +55,39 @@
 
 
 
+
+<!-- Main Content -->
+<div class="container content mt-5 " >
+  <h2>ยินดีต้อนรับสู่เว็บไซต์ของเรา</h2>
+
+</div>
+
+<!-- body -->
+
+
+
+
+
+
+<!-- footer.html -->
+
 <!-- Footer -->
-<footer class="bg-darkpink black p-10 mt-5 ">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h4>Contact Us</h4>
-        <p>Name: AAAA BBBB</p>
-        <p>Email: your@email.com</p>
-        <p>Phone: 123-456-7890</p>
-        <p><a href="https://www.google.com/maps/@8.6500202,99.8923991,15z?entry=ttu" target="_blank">Google Map</a></p>
+<footer class=" text-light p-2 mt-5" style="background-color: rgb(250, 159, 174);">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 label-color-font">
+          <h4>Contact Us</h4>
+          <p>Name : mama mama</p>
+          <p>Email: your@email.com</p>
+          <p>Phone: 123-456-7890</p>
+        </div>
+        <div class="col-md-6 text-right label-color-font">
+          <p><br>  เปิดทุกวัน เวลา 09.00 - 19.00</p>
+          <p>&copy; 2023 Your Website. All rights reserved.</p>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
-
-
+  </footer>
 <!-- Bootstrap JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
