--- a/register.html
+++ b/register.html
@@ -49,25 +49,39 @@
         color: #888; /* สีข้อความท้าย */
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f8f2f4;">
-  <a class="navbar-brand" href="#">Filo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">การจองห้อง</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">ข้อมูลห้อง</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">เงื่อนไขการบริการ</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <a class="navbar-brand" href="index.html">
+      <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
+      Filo
+    </a>
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button >
+    <div class="collapse navbar-collapse" id="navbarNav" >
+      <ul class="navbar-nav ml-auto" >
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">ข้อมูลการติดต่อ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="maincat.html">จัดการข้อมูลแมว</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mainreserve.html">การจองห้อง</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="inforoom2.html">ข้อมูลห้อง</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Showcondition.html">เงื่อนไขการบริการ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login.html">เข้าสู่ระบบ</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
 </head>
