--- a/index.html
+++ b/index.html
@@ -10,13 +10,81 @@
   <link rel="stylesheet" href="stylecable.css">
   <link rel="stylesheet" href="styleIndex.css">  
   
-  
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
+  
+  <style>
+    body {
+      background-image: url('./img/144550.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      color: #fff;
+    }
+
+    .navbar {
+      padding: 10px 20px;
+      background-color: rgba(248, 242, 244, 0.9);
+    }
+
+    .navbar-brand {
+      color: #333;
+    }
+
+    .navbar-nav .nav-link {
+      color: #333;
+    }
+
+    .container {
+      padding: 20px;
+      background-color: rgba(247, 151, 167, 0.9);
+      border-radius: 10px;
+    }
+
+    .ul-text-glow {
+      list-style: none;
+      padding: 0;
+      text-align: center;
+    }
+
+    .li-text-glow {
+      display: inline-block;
+      margin: 0 5px;
+    }
+
+    .input-text-glow {
+      display: none;
+    }
+
+    .div-text-glow {
+      background: linear-gradient(45deg, #FF3D57, #FFBF86);
+      -webkit-background-clip: text;
+      color: transparent;
+      font-size: 24px;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    h1, h2, h5 {
+      text-align: center;
+    }
+
+    iframe {
+      width: 100%;
+      height: 315px;
+    }
+
+    footer {
+      background-color: rgba(250, 159, 174, 0.9);
+      color: #fff;
+      padding: 20px 0;
+      border-radius: 10px;
+    }
+  </style>
 </head>
-<body style="background-image: url('./img/144550.jpg');">
+<body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f8f2f4;">
+<nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="home.html">
     <img src="./img/logo.png" alt="Filo Logo" width="30" height="30" class="d-inline-block align-top">
     Filo
@@ -48,7 +116,99 @@
 <!-- Main Content -->
 <div class="container mt-5">
   <h1>
-    <div style="align-content: center;">
+    <ul class="ul-text-glow">
+      <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked=""/>
+        <div class="div-text-glow">ยิ</div>
+    </li >
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">น</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">ดี</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">ต้</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked=""/>
+        <div class="div-text-glow">อ</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">น</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">รั</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked=""/>
+        <div class="div-text-glow">บ</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">F</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">i</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">l</div>
+    </li>
+    <li class="li-text-glow">
+        <input class="input-text-glow" type="checkbox" checked="">
+        <div class="div-text-glow">o</div>
+    </li>
+      <!-- Repeat similar lines for other checkboxes -->
+    </ul>
+  </h1>
+  <h2 style="color: crimson;">เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</h2>
+  <h5>บริการรับฝากเลี้ยงแมว ทุกสายพันธุ์ และมีสัตว์แพทย์พร้อมดูแลตลอด 24 ชั่วโมง</h5>
+  <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
+    <img src="./cat/cat-6.png" width="42%" height="50%">
+  </div>
+  
+  <!-- Your main website content here -->
+
+</div>
+
+<!-- Footer -->
+<footer class="text-light p-4 mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 text-left">
+        <h4>Contact Us</h4>
+        <p>Name: mama mama</p>
+        <p>Email: your@email.com</p>
+        <p>Phone: 123-456-7890</p>
+      </div>
+      <div class="col-md-6 text-right">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Bootstrap JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
+</html>
+
+
+
+
+<!--
+  <div style="align-content: center;">
       <ul class="ul-text-glow label-text-glow" >
           <li class="li-text-glow">
               <input class="input-text-glow" type="checkbox" checked=""/>
@@ -100,40 +260,4 @@
           </li>
       </ul>
       </div>
-  </h1>
-  <h2><p style="color: crimson;">เปิดทำการ 9.00-19.00 น. (เปิดทำการทุกวัน)</p></h2>
-  <h5><br>บริการรับฝากเลี้ยงแมว ทุกสายพันธุ์ และมีสัตว์แพทย์พร้อมดูแลตลอด 24 ชั่วโมง</h5>
-  <div>
-    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/zadxEvylsw8" frameborder="0" allowfullscreen></iframe>
-    <img src="./cat/cat-6.png" width="42%" height="50%">
-  </div>
-  
-  <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
-
-</div>
-
-<!-- Footer -->
-<footer class=" text-light p-4 mt-5" style="background-color: rgb(250, 159, 174);">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 label-color-font text-left">
-        <h4>Contact Us</h4>
-        <p>Name : mama mama</p>
-        <p>Email: your@email.com</p>
-        <p>Phone: 123-456-7890</p>
-      </div>
-      <div class="col-md-6 text-right label-color-font">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<!-- Bootstrap JS, Popper.js, and jQuery -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-</body>
-</html>
+-->
