--- a/Showcondition.html
+++ b/Showcondition.html
@@ -40,7 +40,7 @@
     }
 
     .label-color-font {
-      color: white;
+      color: rgb(0, 0, 0);
     }
 
     body {
@@ -141,7 +141,7 @@
 </div>
 
 <footer class="text-light p-4 mt-5" style="background-color: pink;">
-  <div class="container">
+  <div>
     <div class="row">
       <div class="col-md-6 label-color-font">
         <h4>Contact Us</h4>
