--- a/infoRoom2.html
+++ b/infoRoom2.html
@@ -7,6 +7,39 @@
   <title>ข้อมูลห้อง</title>
   <link rel="stylesheet" href="styleTime.css">
   <link rel="icon" href="https://img.pikbest.com/origin/09/08/90/25GpIkbEsTwmE.png!sw800" type="image/png">
+  <style>
+    body {
+      background-color: #fce4ec;
+    }
+    .navbar {
+      background-color: #fa9fae !important;
+    }
+    .navbar-light .navbar-toggler-icon {
+      background-color: #fff;
+    }
+    .navbar-nav .nav-link {
+      color: #fff;
+    }
+    .container {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px;
+    }
+    .card-header {
+      background-color: #e779ba;
+      color: #fff;
+    }
+    .card-body {
+      background-color: #f5afd8;
+    }
+   
+    .text-light {
+      color: #fff;
+    }
+    footer {
+      background-color: #fa9fae;
+    }
+  </style>
 </head>
 <body style="background-color: #fce4ec ;">
   <!-- Navigation Bar -->
@@ -37,14 +70,14 @@
   </nav>
 
 <!-- Main Content -->
-<div class="container mt-5" >
-  <h2></h2>
+<div class="container mt-5" style="background-color: #f8a4b2;">
+  <h2>ข้อมูลห้อง</h2>
   <!-- ทำส่วนหลักของเว็บไซต์ที่นี่ -->
 
 </div>
 
   <div class="container mt-8">
-    <h2><br>ข้อมูลห้อง</h2>
+    
 
     <div id="roomCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -61,16 +94,19 @@
                 <div style="text-align: center;">
                   <img src="img/sttd1.jpg" alt="ห้องประเภท 1" width="450" height="300">
               </div>
-                <li>    Standard ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
+                <li>  <h4> Standard</h4> </li>
+                <li>ฝากเลี้ยงแมว ได้ สูงสุด : 1 ตัว</li>
                 <li>    จำนวนห้อง 20 ห้อง</li>
                 <li>    ราคาห้องละ 250 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
-                <li>    ของเล่นแมว</li>
-                <li>    กระบะทราย</li>
-                <li>    จานข้าว</li>
-                <li>    จานน้ำ</li>
-                <li>    กล้องวงจรปิด</li>
-                <li>    แอร์</li>
+                <ul>
+                  <li>    ของเล่นแมว</li>
+                  <li>    กระบะทราย</li>
+                  <li>    จานข้าว</li>
+                  <li>    จานน้ำ</li>
+                  <li>    กล้องวงจรปิด</li>
+                  <li>    แอร์</li>
+                </ul>
                 <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
             </ul>
             
@@ -94,16 +130,19 @@
                 <div style="text-align: center;">
                   <img src="img/supe1.jpg" alt="ห้องประเภท 1" width="450">
               </div>
-                <li>    Superior ฝากเลี้ยงแมว ได้ สูงสุด : 3 ตัว</li>
+                <li>    <h4>Superior </h4></li>
+                <li>ฝากเลี้ยงแมว ได้ สูงสุด : 3 ตัว</li>
                 <li>    จำนวนห้อง 10 ห้อง</li>
                 <li>    ราคาห้องละ 450 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
-                <li>    ของเล่นแมว</li>
-                <li>    กระบะทราย</li>
-                <li>    จานข้าว</li>
-                <li>    จานน้ำ</li>
-                <li>    กล้องวงจรปิด</li>
-                <li>    แอร์</li>
+                <ul>
+                  <li>    ของเล่นแมว</li>
+                  <li>    กระบะทราย</li>
+                  <li>    จานข้าว</li>
+                  <li>    จานน้ำ</li>
+                  <li>    กล้องวงจรปิด</li>
+                  <li>    แอร์</li>
+                </ul>
                 <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
             </ul>
             </div>
@@ -122,16 +161,19 @@
                 <div style="text-align: center;">
                   <img src="img/delux.jpg" alt="ห้องประเภท 1" width="450">
               </div>
-                <li>    Deluxe ฝากเลี้ยงแมว ได้ สูงสุด : 6 ตัว</li>
+                <li><h4>  Deluxe </h4></li>
+                <li>ฝากเลี้ยงแมว ได้ สูงสุด : 6 ตัว</li>
                 <li>    จำนวนห้อง 3 ห้อง</li>
                 <li>    ราคาห้องละ 550 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <ul>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
                 <li>    จานข้าว</li>
                 <li>    จานน้ำ</li>
                 <li>    กล้องวงจรปิด</li>
                 <li>    แอร์</li>
+                </ul>
                 <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
             </ul>
             </div>
@@ -150,16 +192,19 @@
                 <div style="text-align: center;">
                   <img src="img/sweet.jpg" alt="ห้องประเภท 1" width="450">
               </div>
-                <li>    Sweet ฝากเลี้ยงแมว ได้ สูงสุด : 10 ตัว</li>
+                <li><h4>Sweet </h4></li>
+                <li>ฝากเลี้ยงแมว ได้ สูงสุด : 10 ตัว</li>
                 <li>    จำนวนห้อง 1 ห้อง</li>
                 <li>    ราคาห้องละ 900 บาท</li><br><hr style="background-color: white;">
                 <li>    สิ่งอำนวยความสะดวกภายในห้อง</li>
+                <ul>
                 <li>    ของเล่นแมว</li>
                 <li>    กระบะทราย</li>
                 <li>    จานข้าว</li>
                 <li>    จานน้ำ</li>
                 <li>    กล้องวงจรปิด</li>
                 <li>    แอร์</li>
+                </ul>
                 <li><a style="color: red;" href="#">อาหารแมว ผู้ฝากต้องนำมาเอง</a></li>
             </ul>
             </div>
